--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Web calculator build with HTML, Grid CSS, Vanilla JS",
   "main": "main.js",
   "scripts": {
-    "dev": "servor src index.html 1234 --browser --reload"
+    "dev": "servor src index.html 1234 --browser --reload",
+    "test": "jest",
+    "test-debug": "node --inspect-brk node_modules/.bin/jest --runInBand --watch"
   },
   "repository": {
     "type": "git",
@@ -18,6 +20,12 @@
   "homepage": "https://github.com/giodelabarrera/js-calculator#readme",
   "dependencies": {},
   "devDependencies": {
+    "@babel/core": "^7.13.10",
+    "@babel/preset-env": "^7.13.10",
+    "@testing-library/dom": "^7.30.0",
+    "@testing-library/jest-dom": "^5.11.9",
+    "babel-jest": "^26.6.3",
+    "jest": "^26.6.3",
     "servor": "^4.0.2"
   }
 }
