--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@babel/preset-env": "^7.13.10",
     "@testing-library/dom": "^7.30.0",
     "@testing-library/jest-dom": "^5.11.9",
+    "@testing-library/user-event": "^13.1.1",
     "babel-jest": "^26.6.3",
     "jest": "^26.6.3",
     "servor": "^4.0.2"
